hphp/hack/test/typecheck/reactive/mutability_flavors3.php.exp
File "mutability_flavors3.php", line 9, characters 3-4:
Cannot assign immutable value to mutably-owned local variable. Mutability flavor of local variable cannot be altered. (Typing[4294])
